--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,14 @@
     <string name="draw">Draw</string>
     <string name="drawing">Drawing</string>
     <string name="join">Join</string>
+    <string name="profile">Profile</string>
     <string name="discover">Discover</string>
     <string name="gallery">Gallery :</string>
 
     <!--  Premium page  -->
     <string name="get_premium">Get Premium !</string>
     <string name="premium">Premium</string>
+    <string name="not_premium">Not premium</string>
     <string name="advantage">Advantage :</string>
     <string name="advantage_list">- History of the design stages \n- Access to more tools</string>
     <string name="pricing">Pricing :</string>
@@ -35,7 +37,18 @@
     <string name="save">Save</string>
     <string name="featured_artwork">Featured Artwork</string>
     <string name="search">Search</string>
+    <string name="title">Title</string>
+    <string name="delete">Delete</string>
     <string name="empty"/>
+
+    <!-- AlertDialogue -->
+    <string name="select">SELECT</string>
+    <string name="cancel">CANCEL</string>
+    <string name="delete_ask">Do you want to delete this drawing ?</string>
+    <string name="color_ask">Select a color</string>
+    <string name="empty_fields">One or more fields are empty.</string>
+    <string name="user_already_exist">This User already exist</string>
+    <string name="user_doesnt_exist">This user doesn\'t exist</string>
 
     <!--  Icon  -->
     <string name="palette_icon">🎨</string>
@@ -43,4 +56,6 @@
     <string name="picture_icon">🖼️</string>
     <string name="brush_icon">🖌️</string>
     <string name="rule_icon">📏</string>
+
+
 </resources>
