--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="profile">Profile</string>
     <string name="discover">Discover</string>
     <string name="gallery">Gallery :</string>
+    <string name="shared_drawing">Shared drawing :</string>
 
     <!--  Premium page  -->
     <string name="get_premium">Get Premium !</string>
