--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <!-- Activity name -->
     <string name="app_name">PenCollab</string>
     <string name="view_profile">View Profile</string>
     <string name="draw">Draw</string>
@@ -8,6 +9,8 @@
     <string name="discover">Discover</string>
     <string name="gallery">Gallery :</string>
     <string name="shared_drawing">Shared drawing :</string>
+    <string name="history">History</string>
+    <string name="history_list">history list :</string>
 
     <!--  Premium page  -->
     <string name="get_premium">Get Premium !</string>
@@ -16,7 +19,7 @@
     <string name="advantage">Advantage :</string>
     <string name="advantage_list">- History of the design stages \n- Access to more tools</string>
     <string name="pricing">Pricing :</string>
-    <string name="price">4.99$/month</string>
+    <string name="price">Free !</string>
     <string name="buy">Buy Now !</string>
     <string name="ispremium">You are already Premium, thank you !</string>
     <string name="nowpremium">You are now premium, Welcome !</string>
