--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,15 +6,15 @@
     <string name="join">Join</string>
     <string name="profile">Profile</string>
     <string name="discover">Discover</string>
-    <string name="gallery">Gallery :</string>
+    <string name="gallery">Gallery:</string>
 
     <!--  Premium page  -->
     <string name="get_premium">Get Premium !</string>
     <string name="premium">Premium</string>
     <string name="not_premium">Not premium</string>
-    <string name="advantage">Advantage :</string>
+    <string name="advantage">Advantage:</string>
     <string name="advantage_list">- History of the design stages \n- Access to more tools</string>
-    <string name="pricing">Pricing :</string>
+    <string name="pricing">Pricing:</string>
     <string name="price">4.99$/month</string>
     <string name="buy">Buy Now !</string>
     <string name="ispremium">You are already Premium, thank you !</string>
@@ -42,6 +42,8 @@
     <string name="title">Title</string>
     <string name="delete">Delete</string>
     <string name="size">Size</string>
+    <string name="by">By:</string>
+    <string name="createdOn">Created on:</string>
     <string name="empty"/>
 
     <!-- AlertDialogue -->
@@ -53,7 +55,7 @@
     <string name="user_already_exist">This User already exist</string>
     <string name="user_doesnt_exist">This user doesn\'t exist</string>
     <string name="send">Send</string>
-    <string name="shared_with">shared with :</string>
+    <string name="shared_with">shared with:</string>
     <string name="enter_other_username">Please enter an username</string>
     <string name="Visibility">Visibility</string>
 
