Change listView to RecyclerView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="discover">Discover</string>
     <string name="gallery">Gallery:</string>
     <string name="shared_drawing">Shared drawing:</string>
+    <string name="public_drawing">Public drawing:</string>
     <string name="history">History</string>
     <string name="history_list">history list :</string>
 
