--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="eraser">Eraser</string>
     <string name="share">Share</string>
     <string name="save">Save</string>
-    <string name="featured_artwork">Featured Artwork</string>
+    <string name="artwork">Artwork :</string>
     <string name="search">Search</string>
     <string name="title">Title</string>
     <string name="delete">Delete</string>
